# editv

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  editv.sln
editv/: README.md  build.txt  config.c  config.h  editv.vcxproj  editv.vcxproj.filters  file.txt  interface.c  interface.h  main.c  sfd.c  sfd.h  storage.c  storage.h
editv/assets/: metamorphosis-sample.txt
